bbtravis: fix ruff script
ruff check error code would be ignored

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -171,7 +171,7 @@ script:
     condition: TESTS == "ruff"
     cmd:  |
       export PATH=/tmp/bbvenv/bin/:$PATH
-      ruff check `git ls-files |grep '.py$'`
+      ruff check `git ls-files |grep '.py$'` && \
       ruff format --check `git ls-files |grep '.py$'`
 
   # Build documentation
