--- a/www/react-wsgi_dashboards/package.json
+++ b/www/react-wsgi_dashboards/package.json
@@ -68,7 +68,7 @@
     ]
   },
   "peerDependencies": {
-    "axios": "^0.27.2",
+    "axios": "0.27.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
@@ -79,7 +79,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "axios": "^0.27.2",
+    "axios": "0.27.2",
     "axios-mock-adapter": "^1.21.1",
     "babel-preset-react-app": "^10.0.0",
     "buildbot-data-js": "link:../react-data-module",
