--- a/www/react-console_view/package.json
+++ b/www/react-console_view/package.json
@@ -79,8 +79,8 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "axios": "~1.21.1",
-    "axios-mock-adapter": "^1.21.1",
+    "axios": "0.27.2",
+    "axios-mock-adapter": "~1.21.1",
     "babel-preset-react-app": "^10.0.0",
     "buildbot-data-js": "link:../react-data-module",
     "buildbot-plugin-support": "link:../plugin_support",
