--- a/www/react-ui/package.json
+++ b/www/react-ui/package.json
@@ -1,9 +1,12 @@
 {
   "name": "buildbot-ui",
   "version": "0.1.0",
-  "style": "dist/buildbot-ui.css",
   "module": "dist/buildbot-ui.js",
-  "main": "dist/buildbot-ui.cjs",
+  "main": "src/main.ts",
+  "exports": {
+    ".": "src/main.ts",
+    "./style.css": "dist/style.css"
+  },
   "type": "module",
   "types": "dist/main.d.ts",
   "files": [
@@ -13,59 +16,13 @@
     "start": "vite",
     "build": "vite build",
     "build-dev": "vite build -m development",
-    "test": "jest",
-    "test-watch": "jest --watchAll"
+    "test": "vitest run",
+    "test-watch": "vitest --watch"
   },
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "./node_modules/jest-circus/runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.cjs",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.cjs",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.cjs"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleDirectories": [
-      "<rootDir>/node_modules",
-      "node_modules"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "tsx",
-      "json",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
   },
   "babel": {
     "presets": [
@@ -83,18 +40,15 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.1",
     "@types/react-dom": "^18.2.7",
     "@types/react-test-renderer": "^18.0.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "~4.3.1",
     "axios": "0.27.2",
     "axios-mock-adapter": "^1.21.1",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^4.6.2",
     "buildbot-plugin-support": "link:../plugin_support",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
+    "jsdom": "^24.1.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
@@ -107,7 +61,8 @@
     "sass": "^1.56.0",
     "vite": "~5.3.1",
     "vite-plugin-dts": "^2.1.0",
-    "vite-plugin-static-copy": "~1.0.5"
+    "vite-plugin-static-copy": "~1.0.5",
+    "vitest": "~1.6.0"
   },
   "license": "GPL-2.0",
   "dependencies": {
