--- a/www/base/package.json
+++ b/www/base/package.json
@@ -80,6 +80,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jquery": "^3.5.16",
     "@types/react-test-renderer": "^18.0.0",
     "@vitejs/plugin-react": "~4.3.1",
