--- a/www/base/package.json
+++ b/www/base/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^5.3.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.8.1",
     "react-tooltip": "^5.28.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "resolve": "1.18.1",
