--- a/www/data-module/package.json
+++ b/www/data-module/package.json
@@ -25,7 +25,7 @@
     ]
   },
   "peerDependencies": {
-    "axios": "1.7.2",
+    "axios": "~1.7.7",
     "mobx": "^6.6.1",
     "moment": "^2.29.4",
     "react": "^18.2.0"
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@types/react": "^18.0.32",
     "@vitejs/plugin-react": "~4.3.1",
-    "axios": "1.7.2",
+    "axios": "~1.7.7",
     "axios-mock-adapter": "~1.22.0",
     "jsdom": "^24.1.0",
     "mobx": "^6.6.1",
