--- a/www/ui/package.json
+++ b/www/ui/package.json
@@ -44,7 +44,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@vitejs/plugin-react": "~4.3.1",
     "axios": "~1.7.7",
-    "axios-mock-adapter": "^1.21.1",
+    "axios-mock-adapter": "~2.0.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^4.6.2",
     "buildbot-plugin-support": "link:../plugin_support",
