--- a/www/base/package.json
+++ b/www/base/package.json
@@ -39,7 +39,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "react": "^18.2.0",
-    "react-app-polyfill": "^2.0.0",
+    "react-app-polyfill": "~3.0.0",
     "react-bootstrap": "^1.6.5",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dev-utils": "^11.0.3",
