--- a/www/data-module/package.json
+++ b/www/data-module/package.json
@@ -39,7 +39,7 @@
     "mobx": "^6.6.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-app-polyfill": "^2.0.0",
+    "react-app-polyfill": "~3.0.0",
     "vite": "~5.4.3",
     "vite-plugin-dts": "^4.1.0",
     "vitest": "~2.0.5"
