--- a/www/waterfall_view/package.json
+++ b/www/waterfall_view/package.json
@@ -42,7 +42,7 @@
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-app-polyfill": "^2.0.0",
+    "react-app-polyfill": "~3.0.0",
     "react-bootstrap": "^1.6.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
