docker: Use explicit image registry names
There are more than one Docker registry so be explicit.

Additionally, on container runtimes that are not docker (e.g. podman)
the docker.io registry may not have the highest priority.

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -5,7 +5,7 @@
 
 # Provides a base Debian image with latest buildbot worker installed
 
-FROM debian:12
+FROM docker.io/library/debian:12
 MAINTAINER  Buildbot maintainers
 
 # Last build date - this can be updated whenever there are security updates so
