add ignored bugbear lint
This one was excluded in https://github.com/buildbot/buildbot/pull/8002

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ target-version = "py38"
         "PLW2901", # redefined-loop-name
 
         "UP027", # unpacked-list-comprehension Deprecated, see: https://github.com/astral-sh/ruff/issues/12754
+
+        "B007", # unused-loop-control-variable
     ]
 
 [tool.ruff.lint.isort]
