www: Fix wrong buildbot-ui imports

--- a/www/ui/package.json
+++ b/www/ui/package.json
@@ -5,7 +5,8 @@
   "main": "src/main.ts",
   "exports": {
     ".": "src/main.ts",
-    "./style.css": "dist/style.css"
+    "./style.css": "dist/style.css",
+    "./colors.scss": "dist/colors.scss"
   },
   "type": "module",
   "types": "dist/main.d.ts",
